preparing for cyverse

--- a/watson_attempt2.ipynb
+++ b/watson_attempt2.ipynb
@@ -154,12 +154,62 @@
    "outputs": [],
    "source": [
     "def query_pipeline(query):\n",
-    "    query = pass_query_through_ChatGPT(query)\n",
-    "    print(query)\n",
+    "    # query = pass_query_through_ChatGPT(query)\n",
     "    query = filter_query(query)\n",
     "    # query = boost_important_terms(query)\n",
     "    return query"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c83fcd67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def category_pipeine(category):\n",
+    "    new_cat = \"\"\n",
+    "    for c in category.split():\n",
+    "        new_cat += c + \"^0.5 \"\n",
+    "    return new_cat.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a11c55f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"ChatGPT_template/t4.txt\", \"r\") as file:\n",
+    "    template4 = file.read()\n",
+    "def rerank_results(question, results):\n",
+    "    k = 10\n",
+    "    data = { \"question\": question, \"guesses\": [] }\n",
+    "    for i in range(k):\n",
+    "        data[\"guesses\"].append(results[i][0])\n",
+    "    gptq = template4 + json.dumps(data)\n",
+    "    print(gptq)\n",
+    "    try:\n",
+    "        reranked_guesses = json.loads(query_ChatGPT(gptq))[\"reranked_guesses\"]\n",
+    "        reranked_results = []\n",
+    "        for i in range(k):\n",
+    "            reranked_results.append((reranked_guesses[i], i + 1))\n",
+    "        reranked_results += results[k+1:]\n",
+    "        print('here')\n",
+    "        return reranked_results\n",
+    "    except:\n",
+    "        print('failed')\n",
+    "        return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16416ab3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -171,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "b85b91b7",
    "metadata": {},
    "outputs": [],
@@ -207,7 +257,9 @@
     "    \n",
     "    def search(self, category, question, scorer=BM25F):\n",
     "        try:\n",
-    "            query = self._parser.parse(f\"{category}^0.5 \" + query_pipeline(question))\n",
+    "            category = category_pipeine(category)\n",
+    "            question = query_pipeline(question)\n",
+    "            query = self._parser.parse(category + \" \" + question)\n",
     "        except TypeError as e:\n",
     "            print(query_pipeline(question))\n",
     "            raise e\n",
@@ -281,12 +333,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "95661e01",
    "metadata": {},
    "outputs": [],
    "source": [
     "watson = Watson()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8b39287f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "c = \"NOTES FROM THE CAMPAIGN TRAIL\"\n",
+    "q = \"This bestseller about problems on the McCain-Palin ticket became an HBO movie with Julianne Moore\"\n",
+    "r = watson.search(c, q)\n",
+    "print(r[:10])\n",
+    "newr = rerank_results(query_pipeline(q), r)\n",
+    "\n",
+    "print()\n",
+    "print(newr[:10])"
    ]
   },
   {
@@ -299,69 +380,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "8cce1bd4",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\"The dominant paper in our nation's capital,\" it's among the top 10 U.S. papers in circulation.\n",
-      "The practice of pre-authorizing presidential use of force dates to a 1955 resolution re: \"this island near mainland China\".\n",
-      "\"Daniels Hertzberg & James B. Stewart\"\n",
-      "\"you make me smile with my heart; your looks are laughable, unphotographable\" is a quote from a song.\n",
-      "\"In 2011\" \"bell ringers\" \"charity\" \"digital donations\" \"red kettle\"\n",
-      "\"The Naples Museum of Art\"\n",
-      "This Italian painter depicted the \"Adoration of the Golden Calf\"\n",
-      "\"This woman\" \"who won consecutive heptathlons at the Olympics\" \"went to UCLA on a basketball scholarship\"\n",
-      "Originally this club's emblem was \"a wagon wheel\"; now it's \"a gearwheel with 24 cogs & 6 spokes\"\n",
-      "\"El Tahrir\"\n",
-      "\"After the fall of France in 1940, this general told his country, 'France has lost a battle. But France has not lost the war'\"\n",
-      "\"The Taft Museum of Art\"\n",
-      "\"The mast from the USS Maine\" is \"part of the memorial\" to the \"ship & crew\" at \"this national cemetery\".\n",
-      "\"In 2009: Joker on film\"\n",
-      "\"It was the peninsula\" \"fought over\" \"in the Peninsular War\" \"of 1808 to 1814.\"\n",
-      "\"In 1980 China founded a center for these cute creatures in its bamboo-rich Wolong Nature Preserve\"\n",
-      "1988: \"Father Figure\"\n",
-      "In an essay defending this 2011 film, Myrlie Evers-Williams said, \"My mother was\" \"this film\" \"& so was her mother\"\n",
-      "Father Michael McGivney founded \"this fraternal society for Catholic laymen\" in 1882.\n",
-      "\"WWF, this organization\"\n",
-      "Indonesia's largest lizard, \"it's protected from poachers\", \"though we wish it could breathe fire\" to do the job itself.\n",
-      "No updates needed.\n",
-      "\"On May 5, 1878\" \"Alice Chambers\" \"was the last person buried\" \"in this Dodge City, Kansas cemetery\"\n",
-      "\"The Royal Palace grounds\" \"statue of King Norodom\" \"late 1800s\" \"European power\" \"sculpted in that country\"\n",
-      "\"In the 400s B.C.\" \"Chinese philosopher\" \"went into exile\" \"for 12 years\"\n",
-      "\"Bessie Coleman\" \"the first black woman licensed as a pilot\" \"landed a street named in her honor\" at this \"Chicago airport\".\n",
-      "\"The Ammonites\" \"held sway\" \"in this Mideast country\" \"in the 1200s B.C.\" & \"the capital\" \"is named for them\".\n",
-      "He also won a screenwriting Oscar for \"Good Will Hunting\".\n",
-      "One of the N.Y. Times' headlines on this landmark 1973 Supreme Court decision was \"Cardinals shocked\"\n",
-      "France's Philip IV had Jacques De Molay burned in 1314.\n",
-      "\"The Georgia O'Keeffe Museum\"\n",
-      "\"The name of this largest Moroccan city\" \"combines 2 Spanish words.\"\n",
-      "\"Jell-O\"\n",
-      "\"2011: Chicago mayor\" Tom Kane\n",
-      "\"Title residence\" of \"Otter, Flounder, Pinto & Bluto\" in a 1978 comedy.\n",
-      "Neurobiologist Amy Farrah Fowler on \"The Big Bang Theory\", in real life she has a Ph.D. in neuroscience from UCLA.\n",
-      "In \"The Deadlocked Election of 1800\", James R. Sharp outlines the fall of \"this dueling vice president\".\n",
-      "\"He served in the KGB\" before \"becoming president\" & \"then prime minister\" of Russia.\n",
-      "\"When asked to describe herself, she says first & foremost, she is \"Malia & Sasha's mom\".\"\n",
-      "\"My candle burns at both ends... but, ah, my foes, and oh, my friends--it gives a lovely light\"\n",
-      ", dominates the skyline with its \"green dome\" and \"white exterior\".\n",
-      "\"Milton Bradley\" games\n",
-      "\"The Kentucky & Virginia resolutions\" were passed to protest \"these controversial 1798 acts of Congress\".\n",
-      "\"Beat It\" was a hit song in 1983.\n",
-      "\"In 2009: Sookie Stackhouse\"\n",
-      "\"This member of the Nixon & Ford cabinets\" was born in \"Furth, Germany\" in \"1923\".\n",
-      "\"The High Kirk of St. Giles,\" where John Knox was minister.\n",
-      "\"For the brief time he attended\"\n",
-      "\"Fisher-Price\" toys\n",
-      "In a 1959 American kitchen exhibit in Moscow, he told Khrushchev, \"In America, we like to make life easier for women\"\n",
-      "One of his \"Tales of a Wayside Inn\" begins, \"Listen, my children, and you shall hear of the midnight ride of Paul Revere\"\n",
-      "\"This bestseller\" about \"problems on the McCain-Palin ticket\" became \"an HBO movie\" with \"Julianne Moore\".\n",
-      "\"A 2-part episode\" \"JAG\" \"Mark Harmon drama\"\n",
-      "\"This port\" is the \"southernmost\" of \"South Africa's 3 capitals\".\n",
-      "Keats was quoting this Edmund Spenser poem when he told Shelley to \"load every rift\" of your subject with ore.\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[24], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m mrr_score, pa1_score \u001b[38;5;241m=\u001b[39m \u001b[43mwatson\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtest\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43meval\u001b[39;49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mboth\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m mrr_score, pa1_score\n",
+      "Cell \u001b[0;32mIn[19], line 64\u001b[0m, in \u001b[0;36mWatson.test\u001b[0;34m(self, scorer, eval)\u001b[0m\n\u001b[1;32m     62\u001b[0m correct \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m     63\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _, row \u001b[38;5;129;01min\u001b[39;00m questions_df\u001b[38;5;241m.\u001b[39miterrows():\n\u001b[0;32m---> 64\u001b[0m     results \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msearch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrow\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcategory\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrow\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mquestion\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mscorer\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     65\u001b[0m     rank \u001b[38;5;241m=\u001b[39m Watson\u001b[38;5;241m.\u001b[39mget_rank(results, row\u001b[38;5;241m.\u001b[39manswer)\n\u001b[1;32m     66\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m rank \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
+      "Cell \u001b[0;32mIn[19], line 38\u001b[0m, in \u001b[0;36mWatson.search\u001b[0;34m(self, category, question, scorer)\u001b[0m\n\u001b[1;32m     36\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n\u001b[1;32m     37\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_index\u001b[38;5;241m.\u001b[39msearcher(weighting\u001b[38;5;241m=\u001b[39mscorer()) \u001b[38;5;28;01mas\u001b[39;00m searcher:\n\u001b[0;32m---> 38\u001b[0m     results \u001b[38;5;241m=\u001b[39m \u001b[43msearcher\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msearch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mquery\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlimit\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m     39\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m results\u001b[38;5;241m.\u001b[39mscored_length() \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m     40\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "File \u001b[0;32m~/.local/lib/python3.11/site-packages/whoosh/searching.py:786\u001b[0m, in \u001b[0;36mSearcher.search\u001b[0;34m(self, q, **kwargs)\u001b[0m\n\u001b[1;32m    784\u001b[0m c \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcollector(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m    785\u001b[0m \u001b[38;5;66;03m# Call the lower-level method to run the collector\u001b[39;00m\n\u001b[0;32m--> 786\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msearch_with_collector\u001b[49m\u001b[43m(\u001b[49m\u001b[43mq\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mc\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    787\u001b[0m \u001b[38;5;66;03m# Return the results object from the collector\u001b[39;00m\n\u001b[1;32m    788\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m c\u001b[38;5;241m.\u001b[39mresults()\n",
+      "File \u001b[0;32m~/.local/lib/python3.11/site-packages/whoosh/searching.py:819\u001b[0m, in \u001b[0;36mSearcher.search_with_collector\u001b[0;34m(self, q, collector, context)\u001b[0m\n\u001b[1;32m    816\u001b[0m \u001b[38;5;66;03m# Allow collector to set up based on the top-level information\u001b[39;00m\n\u001b[1;32m    817\u001b[0m collector\u001b[38;5;241m.\u001b[39mprepare(\u001b[38;5;28mself\u001b[39m, q, context)\n\u001b[0;32m--> 819\u001b[0m \u001b[43mcollector\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.local/lib/python3.11/site-packages/whoosh/collectors.py:144\u001b[0m, in \u001b[0;36mCollector.run\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    142\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m subsearcher, offset \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtop_searcher\u001b[38;5;241m.\u001b[39mleaf_searchers():\n\u001b[1;32m    143\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mset_subsearcher(subsearcher, offset)\n\u001b[0;32m--> 144\u001b[0m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcollect_matches\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    145\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    146\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfinish()\n",
+      "File \u001b[0;32m~/.local/lib/python3.11/site-packages/whoosh/collectors.py:215\u001b[0m, in \u001b[0;36mCollector.collect_matches\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    213\u001b[0m collect \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcollect\n\u001b[1;32m    214\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m sub_docnum \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmatches():\n\u001b[0;32m--> 215\u001b[0m     \u001b[43mcollect\u001b[49m\u001b[43m(\u001b[49m\u001b[43msub_docnum\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.local/lib/python3.11/site-packages/whoosh/collectors.py:374\u001b[0m, in \u001b[0;36mScoredCollector.collect\u001b[0;34m(self, sub_docnum)\u001b[0m\n\u001b[1;32m    371\u001b[0m     score \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfinal_fn(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtop_searcher, global_docnum, score)\n\u001b[1;32m    373\u001b[0m \u001b[38;5;66;03m# Call specialized method on subclass\u001b[39;00m\n\u001b[0;32m--> 374\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_collect\u001b[49m\u001b[43m(\u001b[49m\u001b[43mglobal_docnum\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mscore\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.local/lib/python3.11/site-packages/whoosh/collectors.py:519\u001b[0m, in \u001b[0;36mUnlimitedCollector._collect\u001b[0;34m(self, global_docnum, score)\u001b[0m\n\u001b[1;32m    516\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreverse \u001b[38;5;241m=\u001b[39m reverse\n\u001b[1;32m    518\u001b[0m \u001b[38;5;66;03m# ScoredCollector.collect calls this\u001b[39;00m\n\u001b[0;32m--> 519\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_collect\u001b[39m(\u001b[38;5;28mself\u001b[39m, global_docnum, score):\n\u001b[1;32m    520\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mitems\u001b[38;5;241m.\u001b[39mappend((score, global_docnum))\n\u001b[1;32m    521\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdocset\u001b[38;5;241m.\u001b[39madd(global_docnum)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -404,7 +443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
